--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Let's See - Chumsaeng </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/ionicons.min.css" />
 
     <link href="https://fonts.googleapis.com/css?family=Kanit:100,300,400,700" rel="stylesheet">
 </head>
@@ -27,43 +28,86 @@
                 <span class="heading__primary--main">ชุมแสง </span>
                 <span class="heading__primary--sub">นครสวรรค์</span>
             </h1>
-            <a href="#" class="btn btn__full">What We Have</a>
+            <a href="#" class="btn btn__full">What We Have ?</a>
             <a href="#" class="btn btn__ghost">How to visit</a>
         </div>
     </header>
     <body>
         <section class="section-feature row">
-            <h2 class="heading-secondary">
-                Features
+            <h2 class="heading__secondary u__margin-b-medium">
+                What We Have ?
             </h2>
-            <p class="feature-paragraph">
+            <p class="feature-paragraph u__margin-b-medium">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Hic provident ducimus labore officiis sed iure dignissimos veniam qui quidem error 
                 consectetur dolorem harum, libero nihil quis deserunt odio obcaecati voluptatem?
             </p>
             <div class="feature">
                 <div class="feature__box">
-                    <i class="feature__icon">icon</i>
-                    <p class="small-paragraph">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    <i class="feature__icon ion-leaf">อากาศดี</i>
+                    <p class="small-paragraph u__margin-t-small">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero maiores tempore labore aspernatur ut vero magnam porro vitae voluptatem soluta minus praesentium temporibus sit optio inventore dolore facilis, consectetur exercitationem!
                     </p>
                 </div>
                 <div class="feature__box">
-                    <i class="feature__icon">icon</i>
-                    <p class="small-paragraph">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    <i class="feature__icon ion-fork ">อาหารอร่อย</i>
+                    <p class="small-paragraph u__margin-t-small">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias debitis dicta alias vero? Debitis dolores doloremque laudantium maiores dignissimos cum vero mollitia fugit, sequi, rem eveniet consequuntur illum, vel expedita?
                     </p>
                 </div>
                 <div class="feature__box">
-                    <i class="feautre__icon">icon</i>
-                    <p class="small-paragraph">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    <i class="feature__icon ion-happy">เต็มไปด้วยรอยยิ้ม</i>
+                    <p class="small-paragraph u__margin-t-small">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate doloremque veniam, non reprehenderit labore sunt provident, quisquam pariatur at eveniet nesciunt, magnam fugit obcaecati possimus nobis fuga facilis facere culpa!
                     </p>
                 </div>
                 <div class="feature__box">
-                    <i class="feautre__icon">icon</i>
-                    <p class="small-paragraph">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    <i class="feature__icon ion-card">ประหยัดค่าใช้จ่าย</i>
+                    <p class="small-paragraph u__margin-t-small">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eveniet ducimus architecto veritatis fugiat aut illum? Quia nostrum tempora aliquid rem, sint ullam ratione ipsum nam totam. Magnam, voluptatem ad.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="section-gallery">
+            <figure>
+                <img src="http://via.placeholder.com/300x400" alt="pic1">
+            </figure>
+            <figure>
+                <img src="http://via.placeholder.com/300x400" alt="pic2">
+            </figure>
+            <figure>
+                <img src="http://via.placeholder.com/300x400" alt="pic3">
+            </figure>
+            <figure>
+                <img src="http://via.placeholder.com/300x400" alt="pic4">
+            </figure>
+            <figure>
+                <img src="http://via.placeholder.com/300x400" alt="pic4">
+            </figure>
+            <figure>
+                <img src="http://via.placeholder.com/300x400" alt="pic4">
+            </figure>
+            <figure>
+                <img src="http://via.placeholder.com/300x400" alt="pic4">
+            </figure>
+            <figure>
+                <img src="http://via.placeholder.com/300x400" alt="pic4">
+            </figure>
+        </section>
+        <section class="section-traditional row">
+            <h2 class="heading__secondary u__margin-b-medium">
+                Mix Traditional
+            </h2>
+            <div class="traditionals">
+                <div class="traditionals__left">
+                    <p class="trad_paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate esse enim deserunt quod maiores, laudantium nemo commodi, doloremque quam accusantium incidunt? Quasi iusto, debitis reprehenderit minus accusamus nemo unde deserunt?
+                    </p>
+            </div>
+            <div class="traditionals__right">
+                    <p class="trad_paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem non repellat corrupti molestiae odio fugit tempore. Quidem facere sapiente tempore, iste eius nihil doloribus dicta tenetur deserunt sed placeat incidunt!
                     </p>
                 </div>
             </div>
